--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 app-env
 createdb.sql
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
